# Jobs-API-Microservice

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: models.py  queue.py
app/api/v1/: jobs.py
migrations/versions/: 0002_add_job_version_column.py
schemas/jobs/: openapi.yaml
scripts/: seed_db.py
tests/: test_jobs_api.py
