[tool]
name = "my-fastapi-app"
version = "0.1.0"
description = "A simple FastAPI application with a Hello World endpoint."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.23.0"
pydantic = "^2.0.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
alembic = "^1.12.0"
jobs-data-contracts = ">=1.2.1,<2.0.0"
email-validator = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
httpx = "^0.27.0"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
